# nano-PEARL

./: .gitignore  INSTALL.md  README.md  bench.py  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt  run_benchmark.sh
benchmark/: __init__.py  bench_args.py  bench_runner.py
nano_pearl/: pearl_config.py
nano_pearl/layers/: attention.py
nano_pearl/pearl_engine/: pearl_model_runner.py
nano_pearl/utils/: gpu_power_monitor.py  prompt_loader.py
